<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <TextView
        android:id="@+id/counter"
        android:layout_width="322dp"
        android:layout_height="272dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:textSize="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="@dimen/button_size_width"
        android:layout_height="@dimen/button_size_height"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="@dimen/button_size_width"
        android:layout_height="@dimen/button_size_height"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/start_button"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/create"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create"
        android:layout_width="@dimen/button_size_width"
        android:layout_height="@dimen/button_size_height"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/create_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
