<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details.DetailsFragments">


    <ImageView
        android:id="@+id/BackgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/background_image" />

    <ImageView
        android:id="@+id/Download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@mipmap/ic_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/MainImage"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackgroundImage"
        tools:srcCompat="@drawable/main_image" />

    <TextView
        android:id="@+id/TitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/avengers_infinity_war"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/MainImage"
        app:layout_constraintTop_toBottomOf="@+id/BackgroundImage" />

    <TextView
        android:id="@+id/ReleasedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/realeased"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_detailes"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/MainImage"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/DateReleased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/realeased_date"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_detailes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/ReleasedView"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/Overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_detailes"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainImage" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="333dp"
        android:layout_height="148dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:text="@string/description"
        android:textSize="@dimen/text_size_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Overview"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/trailerButton"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_trailer"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/MainImage"
        app:layout_constraintTop_toBottomOf="@+id/ReleasedView"
       />

</android.support.constraint.ConstraintLayout>